--- a/sass/Dvideo/_ctrl.scss
+++ b/sass/Dvideo/_ctrl.scss
@@ -7,3 +7,14 @@
 	left:0;
 	right:0;
 }
+
+.Dvideo-header{
+	position:absolute;
+	top:0;
+	height:$header_height;
+	line-height: $header_height;
+	background:$ctrl_bg;
+	width:100%;
+	left:0;
+	right:0;
+}
