--- a/sass/Dvideo/_global.scss
+++ b/sass/Dvideo/_global.scss
@@ -4,6 +4,9 @@ $primary_color: red;
 // video的 容器栏
 $content_bg: #000;
 
+// == 头部菜单
+$header_height: 36px;
+
 // ==  控制条栏
 $ctrl_height: 40px;
 $ctrl_bg: rgba(0,0,0,0.8);
