--- a/css/Dvideo.css
+++ b/css/Dvideo.css
@@ -81,8 +81,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   background: #000;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
-/* line 18, ../sass/Dvideo/_content.scss */
+/* line 19, ../sass/Dvideo/_content.scss */
 .Dvideo-content .Dvideo-ele {
   width: 100%;
   height: auto;
@@ -98,15 +99,77 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 1, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl {
   position: absolute;
-  bottom: 0;
+  bottom: -40px;
   height: 40px;
   background: rgba(0, 0, 0, 0.8);
   width: 100%;
   left: 0;
   right: 0;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  font-size: 0;
+}
+/* line 13, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl.active {
+  bottom: 0;
+}
+/* line 18, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-progress-content {
+  height: 1px;
+  width: 100%;
+  position: absolute;
+  bottom: 40px;
+  background: red;
+}
+/* line 25, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-ctrl-state {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  width: auto;
+  height: 100%;
+  padding: 0 8px;
+  text-align: center;
+}
+/* line 31, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-ctrl-state:after {
+  display: inline-block;
+  width: 0;
+  height: 100%;
+  vertical-align: middle;
+  content: '';
+}
+/* line 38, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-ctrl-state .Dvideo-ctrl-playPause {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  vertical-align: middle;
+  color: #fff;
+  font-size: 24px;
+  margin-right: 16px;
+  cursor: pointer;
+}
+/* line 46, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-ctrl-state .Dvideo-ctrl-next {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  vertical-align: middle;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-/* line 11, ../sass/Dvideo/_ctrl.scss */
+/* line 56, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-header {
   position: absolute;
   top: 0;
@@ -116,6 +179,32 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   width: 100%;
   left: 0;
   right: 0;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  visibility: hidden;
+}
+/* line 68, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-header.active {
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+  visibility: visible;
+}
+/* line 73, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-header .Dvideo-header-title {
+  width: 80%;
+  height: 100%;
+  padding: 0 8px;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.8);
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
 }
 
 /* line 11, ../sass/Dvideo.scss */
