--- a/sass/Dvideo/_content.scss
+++ b/sass/Dvideo/_content.scss
@@ -14,6 +14,7 @@
 	background:$content_bg;
 	width: 100%;
 	height: 100%;
+	overflow:hidden;
 	// @include display-flex;
 	.Dvideo-ele{
 		width: 100%;
