--- a/sass/Dvideo/_global.scss
+++ b/sass/Dvideo/_global.scss
@@ -14,3 +14,9 @@ $header_height: 36px;
 $ctrl_height: 40px;
 $ctrl_bg: rgba(0,0,0,0.8);
 $padding_leftright: 8px;
+
+$progress_auto_bg: #333;
+$progress_real_bg: red;
+$progress_buffered_bg: #999;
+
+$icon_color: rgb(120, 125, 130);
