--- a/font-icon/style.css
+++ b/font-icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9e3opw');
-  src:  url('fonts/icomoon.eot?9e3opw#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9e3opw') format('truetype'),
-    url('fonts/icomoon.woff?9e3opw') format('woff'),
-    url('fonts/icomoon.svg?9e3opw#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?hm3kpy');
+  src:  url('fonts/icomoon.eot?hm3kpy#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?hm3kpy') format('truetype'),
+    url('fonts/icomoon.woff?hm3kpy') format('woff'),
+    url('fonts/icomoon.svg?hm3kpy#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-canclefullscreen:before {
+  content: "\e932";
+}
+.icon-fullscreen:before {
+  content: "\e933";
+}
 .icon-erji:before {
   content: "\e931";
 }
