--- a/sass/Dvideo/_ctrl.scss
+++ b/sass/Dvideo/_ctrl.scss
@@ -15,40 +15,135 @@
 		// visibility:visible;
 		bottom:0;
 	}
+	.Dvideo-detail{
+		width: 100%;
+		height: 100%;
+		font-size: 0;
+		position: relative;
+		.Dvideo-ctrl-state{
+			@include inline-block;
+			width: auto;
+			height: 100%;
+			padding:0 8px;
+			text-align: center;
+			&:after{
+				content:'';
+				@include inline-block;
+				width:0;
+				height:100%;
+				vertical-align:middle;
+			}
+			.Dvideo-ctrl-playPause{
+				@include inline-block;
+				vertical-align: middle;
+				color: #fff;
+				font-size: 24px;
+				margin-right: 16px;
+				cursor: pointer;
+			}
+			.Dvideo-ctrl-next{
+				@include inline-block;
+				vertical-align: middle;
+				color: #fff;
+				font-size: 20px;
+				cursor: pointer;
+			}
+		}
+		.Dvideo-time-content{
+			@include inline-block;
+			width: auto;
+			color: $icon_color;
+			font-size: 0;
+			font-weight: 200;
+			.Dvideo-text-current,.Dvideo-text-duration{
+				@include inline-block;
+				font-size: 12px;
+				width: 50px;
+				text-align: center;
+				position:relative;
+			}
+			.Dvideo-text-duration:before{
+				content: '/';
+				position: absolute;
+				top: 50%;
+				left: 0;
+				color: #fff;
+				@include translate(-50%,-50%);
+			}
+		}
+		.Dvideo-menu-right-content{
+			position:absolute;
+			top: 0;
+			right: 0;
+			height: 100%;
+			width: auto;
+			padding-right: 10px;
+			&:after{
+				content:'';
+				@include inline-block;
+				width:0;
+				height:100%;
+				vertical-align:middle;
+			}
+
+			i{
+				@include inline-block;
+				font-size: 16px;
+				color: $icon_color;
+				vertical-align: middle;
+				cursor: pointer;
+			}
+		}
+	}
 	.Dvideo-progress-content{
 		height: 1px;
 		width: 100%;
+		cursor: pointer;
 		position:absolute;
 		bottom: $ctrl_height;
-		background:red;
-	}
-	.Dvideo-ctrl-state{
-		@include inline-block;
-		width: auto;
-		height: 100%;
-		padding:0 8px;
-		text-align: center;
-		&:after{
-			display:inline-block;
-			width:0;
-			height:100%;
-			vertical-align:middle;
-			content:'';
+		background:$progress_auto_bg;
+		.Dvideo-progress-buffered{
+			width: 0;
+			height: 100%;
+			background:$progress_buffered_bg;
+			position:absolute;
+			top: 0;
+			left: 0;
+			@include transition(width 0.3s);
 		}
-		.Dvideo-ctrl-playPause{
-			@include inline-block;
-			vertical-align: middle;
-			color: #fff;
-			font-size: 24px;
-			margin-right: 16px;
-			cursor: pointer;
+		.Dvideo-progress-real{
+			width: 0%;
+			height: 100%;
+			background:$progress_real_bg;
+			position: relative;
+			@include transition(width 0.3s);
 		}
-		.Dvideo-ctrl-next{
-			@include inline-block;
-			vertical-align: middle;
-			color: #fff;
-			font-size: 20px;
-			cursor: pointer;
+		.Dvideo-circle-range{
+			display: none;
+			position:absolute;
+			top: -5px;
+			right: -7px;
+			width: 14px;
+			height: 14px;
+			background: #fff;
+			@include border-radius(50%);
+			&:after{
+				content: '';
+				position:absolute;
+				top:50%;
+				left: 50%;
+				width: 6px;
+				height: 6px;
+				@include border-radius(50%);
+				background: $progress_real_bg;
+				@include translate(-50%,-50%);
+			}
+		}
+		&.active{
+			height: 4px;
+			.Dvideo-circle-range{
+				display: block;
+			}
 		}
 	}
 }
