--- a/sass/Dvideo/_ctrl.scss
+++ b/sass/Dvideo/_ctrl.scss
@@ -15,6 +15,15 @@
 		// visibility:visible;
 		bottom:0;
 	}
+	&:before{
+		content: '';
+		position:absolute;
+		left: 0;
+		right: 0;
+		bottom: $ctrl_height;
+		height: 10px;
+		background: transparent;
+	}
 	.Dvideo-detail{
 		width: 100%;
 		height: 100%;
@@ -102,27 +111,33 @@
 		position:absolute;
 		bottom: $ctrl_height;
 		background:$progress_auto_bg;
-		.Dvideo-progress-buffered{
-			width: 0;
+		z-index: 2;
+		.Dvideo-progress-detail{
 			height: 100%;
-			background:$progress_buffered_bg;
-			position:absolute;
-			top: 0;
-			left: 0;
-			@include transition(width 0.3s);
-		}
-		.Dvideo-progress-real{
-			width: 0%;
-			height: 100%;
-			background:$progress_real_bg;
-			position: relative;
-			@include transition(width 0.3s);
+			width: 100%;
+			.Dvideo-progress-buffered{
+				width: 0;
+				height: 100%;
+				background:$progress_buffered_bg;
+				position:absolute;
+				top: 0;
+				left: 0;
+				@include transition(width 0.3s);
+			}
+			.Dvideo-progress-real{
+				width: 0%;
+				height: 100%;
+				background:$progress_real_bg;
+				position: relative;
+				@include transition(width 0.3s);
+			}
 		}
 		.Dvideo-circle-range{
 			display: none;
 			position:absolute;
 			top: -5px;
-			right: -7px;
+			left: 0;
+			margin-left: -7px;
 			width: 14px;
 			height: 14px;
 			background: #fff;
@@ -141,10 +156,27 @@
 		}
 		&.active{
 			height: 4px;
+			.Dvideo-progress-detail{
+				.Dvideo-progress-real{
+					@include transition(none);
+				}
+			}
 			.Dvideo-circle-range{
 				display: block;
 			}
 		}
+	}
+	.Dvideo-tips-info{
+		position:absolute;
+		left: 0;
+		right: 0;
+		bottom: $ctrl_height;
+		height: 28px;
+		line-height: 28px;
+		z-index: 1;
+		background: transparent;
+		color: #fff;
+	    font-size: 12px;
 	}
 }
 
