添加语速设置  有点问题

--- a/css/Dvideo.css
+++ b/css/Dvideo.css
@@ -105,7 +105,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   position: absolute;
   bottom: -40px;
   height: 40px;
-  background: rgba(0, 0, 0, 0.8);
+  background: #070C11;
   width: 100%;
   left: 0;
   right: 0;
@@ -228,7 +228,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   right: 0;
   height: 100%;
   width: auto;
-  padding-right: 10px;
 }
 /* line 90, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content:after {
@@ -253,8 +252,70 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   color: #787d82;
   vertical-align: middle;
   cursor: pointer;
+  margin: 0 10px;
 }
-/* line 107, ../sass/Dvideo/_ctrl.scss */
+/* line 106, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-playbackRate {
+  color: #787d82;
+  width: 35px;
+  text-align: center;
+  vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  font-size: 12px;
+  margin: 0 10px;
+  padding: 2px 4px;
+  color: #070C11;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  background: #787d82;
+  cursor: pointer;
+  position: relative;
+}
+/* line 121, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-playbackRate .Dvideo-playbackRate-content {
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  background: #070C11;
+  padding-bottom: 10px;
+  width: 60px;
+  height: auto;
+  left: 50%;
+  z-index: 3;
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+}
+/* line 132, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-playbackRate .Dvideo-playbackRate-content.active {
+  display: block;
+}
+/* line 135, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-playbackRate .Dvideo-playbackRate-content .Dvideo-playbackRate-list {
+  display: block;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  color: #787d82;
+}
+/* line 141, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-playbackRate .Dvideo-playbackRate-content .Dvideo-playbackRate-list.active {
+  color: red;
+}
+/* line 144, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-playbackRate .Dvideo-playbackRate-content .Dvideo-playbackRate-list:hover {
+  background: #1F2429;
+}
+/* line 152, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content {
   height: 1px;
   width: 100%;
@@ -264,12 +325,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   background: #333;
   z-index: 2;
 }
-/* line 115, ../sass/Dvideo/_ctrl.scss */
+/* line 160, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-progress-detail {
   height: 100%;
   width: 100%;
 }
-/* line 118, ../sass/Dvideo/_ctrl.scss */
+/* line 163, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-progress-detail .Dvideo-progress-buffered {
   width: 0;
   height: 100%;
@@ -282,7 +343,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transition: width 0.3s;
   transition: width 0.3s;
 }
-/* line 127, ../sass/Dvideo/_ctrl.scss */
+/* line 172, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-progress-detail .Dvideo-progress-real {
   width: 0%;
   height: 100%;
@@ -293,7 +354,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transition: width 0.3s;
   transition: width 0.3s;
 }
-/* line 135, ../sass/Dvideo/_ctrl.scss */
+/* line 180, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-circle-range {
   display: none;
   position: absolute;
@@ -307,7 +368,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 145, ../sass/Dvideo/_ctrl.scss */
+/* line 190, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-circle-range:after {
   content: '';
   position: absolute;
@@ -324,22 +385,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-/* line 157, ../sass/Dvideo/_ctrl.scss */
+/* line 202, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content.active {
   height: 4px;
 }
-/* line 160, ../sass/Dvideo/_ctrl.scss */
+/* line 205, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content.active .Dvideo-progress-detail .Dvideo-progress-real {
   -moz-transition: none;
   -o-transition: none;
   -webkit-transition: none;
   transition: none;
 }
-/* line 164, ../sass/Dvideo/_ctrl.scss */
+/* line 209, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content.active .Dvideo-circle-range {
   display: block;
 }
-/* line 169, ../sass/Dvideo/_ctrl.scss */
+/* line 214, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-tips-info {
   position: absolute;
   left: 0;
@@ -353,13 +414,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-size: 12px;
 }
 
-/* line 183, ../sass/Dvideo/_ctrl.scss */
+/* line 228, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-header {
   position: absolute;
   top: 0;
   height: 36px;
   line-height: 36px;
-  background: rgba(0, 0, 0, 0.8);
+  background: #070C11;
   width: 100%;
   left: 0;
   right: 0;
@@ -371,13 +432,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   opacity: 0;
   visibility: hidden;
 }
-/* line 195, ../sass/Dvideo/_ctrl.scss */
+/* line 240, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-header.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   visibility: visible;
 }
-/* line 200, ../sass/Dvideo/_ctrl.scss */
+/* line 245, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-header .Dvideo-header-title {
   width: 80%;
   height: 100%;
