--- a/sass/Dvideo/_global.scss
+++ b/sass/Dvideo/_global.scss
@@ -12,11 +12,14 @@ $header_height: 36px;
 
 // ==  控制条栏
 $ctrl_height: 40px;
-$ctrl_bg: rgba(0,0,0,0.8);
+$ctrl_bg: #070C11;
 $padding_leftright: 8px;
 
 $progress_auto_bg: #333;
 $progress_real_bg: red;
 $progress_buffered_bg: #999;
+
+// rateHoverColor
+$rate_hover_color: #1F2429;
 
 $icon_color: rgb(120, 125, 130);
