--- a/sass/Dvideo/_ctrl.scss
+++ b/sass/Dvideo/_ctrl.scss
@@ -86,7 +86,7 @@
 			right: 0;
 			height: 100%;
 			width: auto;
-			padding-right: 10px;
+			// padding-right: 10px;
 			&:after{
 				content:'';
 				@include inline-block;
@@ -101,6 +101,51 @@
 				color: $icon_color;
 				vertical-align: middle;
 				cursor: pointer;
+				margin: 0 10px;
+			}
+			.Dvideo-playbackRate{
+				color: $icon_color;
+				width: 35px;
+				text-align: center;
+				vertical-align: middle;
+				@include inline-block;
+				font-size: 12px;
+				margin: 0 10px;
+				padding: 2px 4px;
+				color: $ctrl_bg;
+				@include box-sizing(border-box);
+				@include border-radius(2px);
+				background: $icon_color;
+				cursor: pointer;
+				position:relative;
+				.Dvideo-playbackRate-content{
+					display: none;
+					position: absolute;
+					bottom: 100%;
+					background:$ctrl_bg;
+					padding-bottom: 10px;
+					width: 60px;
+					height: auto;
+					left: 50%;
+					z-index: 3;
+					@include translate(-50%,0);
+					&.active{
+						display: block;
+					}
+					.Dvideo-playbackRate-list{
+						display: block;
+						width: 100%;
+						height: 30px;
+						line-height: 30px;
+						color: $icon_color;
+						&.active{
+							color: $primary_color;
+						}
+						&:hover{
+							background: $rate_hover_color;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -127,7 +172,7 @@
 			.Dvideo-progress-real{
 				width: 0%;
 				height: 100%;
-				background:$progress_real_bg;
+				background:$primary_color;
 				position: relative;
 				@include transition(width 0.3s);
 			}
@@ -150,7 +195,7 @@
 				width: 6px;
 				height: 6px;
 				@include border-radius(50%);
-				background: $progress_real_bg;
+				background: $primary_color;
 				@include translate(-50%,-50%);
 			}
 		}
