--- a/sass/Dvideo/_global.scss
+++ b/sass/Dvideo/_global.scss
@@ -1,4 +1,4 @@
-$primary_color: red;
+$primary_color: #F29A4D;
 
 $text_deep_color: rgba(255,255,255,0.8);
 
@@ -16,7 +16,7 @@ $ctrl_bg: #070C11;
 $padding_leftright: 8px;
 
 $progress_auto_bg: #333;
-$progress_real_bg: red;
+$progress_real_bg: #F29A4D;
 $progress_buffered_bg: #999;
 
 // rateHoverColor
