--- a/sass/Dvideo/_ctrl.scss
+++ b/sass/Dvideo/_ctrl.scss
@@ -49,6 +49,9 @@
 				font-size: 24px;
 				margin-right: 16px;
 				cursor: pointer;
+				&:hover{
+					color: $primary_color;
+				}
 			}
 			.Dvideo-ctrl-next{
 				@include inline-block;
@@ -56,6 +59,9 @@
 				color: #fff;
 				font-size: 20px;
 				cursor: pointer;
+				&:hover{
+					color: $primary_color;
+				}
 			}
 		}
 		.Dvideo-time-content{
@@ -102,22 +108,32 @@
 				vertical-align: middle;
 				cursor: pointer;
 				margin: 0 10px;
+				&:hover{
+					color: $primary_color;
+				}
 			}
 			.Dvideo-playbackRate{
 				color: $icon_color;
 				width: 35px;
+				height: 18px;
+			    line-height: 13px;
 				text-align: center;
 				vertical-align: middle;
 				@include inline-block;
 				font-size: 12px;
 				margin: 0 10px;
 				padding: 2px 4px;
-				color: $ctrl_bg;
 				@include box-sizing(border-box);
 				@include border-radius(2px);
 				background: $icon_color;
 				cursor: pointer;
 				position:relative;
+				@include transition(background 0.3s);
+				.Dvideo-playbackRateText{
+					width: 100%;
+					height: 100%;
+					color: $ctrl_bg;
+				}
 				.Dvideo-playbackRate-content{
 					display: none;
 					position: absolute;
@@ -146,11 +162,14 @@
 						}
 					}
 				}
+				&:hover{
+					background: $primary_color;
+				}
 			}
 		}
 	}
 	.Dvideo-progress-content{
-		height: 1px;
+		height: 2px;
 		width: 100%;
 		cursor: pointer;
 		position:absolute;
